--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="10dp">
@@ -36,7 +36,7 @@
         android:padding="5dp"
         android:textSize="15dp"
         app:layout_constraintStart_toEndOf="@id/name"
-        app:layout_constraintTop_toBottomOf="price"
+        app:layout_constraintTop_toBottomOf="@id/price"
         tools:text="Amazon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
